--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "discord-rich-presence": "0.0.8",
     "neo-blessed": "^0.2.0",
     "node-mpv": "^2.0.0-beta.1",
+    "tmp": "^0.2.1",
     "yt-search": "^2.3.1"
   },
   "devDependencies": {},
