--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "neo-blessed": "^0.2.0",
     "node-mpv": "^2.0.0-beta.1",
     "tmp": "^0.2.1",
-    "yt-search": "^2.3.1"
+    "yt-search": "^2.3.1",
+    "ytdl-core": "^3.3.0"
   },
   "devDependencies": {},
   "scripts": {
